<resources>
    <string name="app_name">SwarmskyToX</string>
    <string name="app_description">Misskey (Swarmsky) の投稿をXに転送するアプリ</string>
    <string name="app_copyright">Copyright (c) 2023-2026 Sora Arakawa</string>
    <string name="app_license">Licensed under the MIT License</string>
    <string name="app_url_web">https://arkw.net/</string>
    <string name="app_url_github">https://github.com/arkwnet/SwarmskyToX</string>
    <string name="app_url_privacy">https://arkw.net/privacy/</string>
    <string name="button_refresh">更新</string>
    <string name="button_tutorial">操作説明</string>
    <string name="button_settings">設定</string>
    <string name="settings_edit_text_host">ホスト名</string>
    <string name="settings_edit_text_userid">ユーザID</string>
    <string name="settings_edit_text_token">アクセストークン</string>
    <string name="settings_text_view_host">例: misskey.io</string>
    <string name="settings_text_view_userid">例: 1a23bcdef4\nMisskeyの設定→その他→アカウント情報から確認できます</string>
    <string name="settings_text_view_token">非公開サーバ・アカウントなど、必要な場合のみ入力してください</string>
    <string name="settings_text_view_token2">例: a0B1c2D3e4F5g6H7i8J9k0L1m2N3o4P5\nMisskeyの設定→API→アクセストークンの発行から取得できます</string>
    <string name="settings_button_save">保存</string>
    <string name="settings_privacy">プライバシーポリシー</string>
    <string name="alert_nodata">Misskeyのホスト名とユーザIDを設定してください。</string>
    <string name="alert_error">エラーが発生しました。もう一度お試しください。</string>
    <string name="alert_save">設定内容を保存しました。</string>
    <string name="created_at_future">未来</string>
    <string name="created_at_now">たった今</string>
    <string name="created_at_second">秒前</string>
    <string name="created_at_minute">分前</string>
    <string name="created_at_hour">1時間以上前</string>
    <string name="message_no_post">Swarmに関連するノートがありません</string>
    <string name="title_tutorial">操作説明</string>
    <string name="title_settings">設定</string>
    <string name="tutorial1">SwarmskyToXは、Swarmsky経由でMisskeyに投稿されたノートをX (旧Twitter) に転送するアプリです。</string>
    <string name="tutorial2">まず、画面右上の設定ボタンからMisskeyのアカウント情報を入力します。ホスト名は「@arkw@misskey.io」のようなActivityPubユーザ名の「misskey.io」の部分で、一般的にはMisskeyインスタンスのドメイン名と同じです。ユーザIDはMisskeyの設定→その他→アカウント情報から確認できます。先ほど例示したユーザ名の「arkw」にあたる部分では無いため注意してください。非公開のサーバ・アカウントなど、必要な場合のみMisskeyで発行したアクセストークンも指定します。該当項目の入力が終わったら保存ボタンを押してください。</string>
    <string name="tutorial3">Misskeyのアカウント情報が正しく設定され、かつ直近でSwarmskyを利用していれば合致するノートが一覧表示されます。各ノートを短くタップすると、同じ文面をXのポスト作成画面に転送します。X以外のSNSへの投稿など、クリップボードへ文章をコピーしたい時は長くタップしてください。</string>
</resources>